rewrote biography and previous work sections of index. Made spelling fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Anteny Erdman Professional Website</title>
+    <title>Antny Erdman Professional Website</title>
     <link rel="stylesheet" href="ProBio.css" />
     <script defer src="ProBio.js"></script>
   </head>
@@ -23,36 +23,32 @@
         <img
           class="ProImg"
           src="../Docs/20220512_130947.jpg"
-          alt="Anteny and his cat Mononoke"
+          alt="Antny Erdman"
           width="200"
           height="200"
         />
         <p class="output">
-          After graduation I plan to get into the fields of software development
-          or computer graphics. I currently have not been a part of any
-          internships. Instead of an internship I have a history of working
-          full-time while attending Portland State University. Accompanied by
-          graduating debt free, I will be able to move directly into the field
-          of my choice. I desire to create quality content that someone can look
-          at and say, "This is really cool." I do this all the time with games,
-          shows, or music that I listen to. While I don't have skills that could
-          help me be a game designer, an actor, or a musician. The skills that I
-          do have help me work with computers and software. So, I will use those
-          skills to push forwards the boundaries of what can be done with media.
+          I graduated from Portland State University with my Bachelor's in
+          computer science in june of 2023. I am working in my free time to
+          learn about computer graphic design and application development.
+          I enjoy legacy boardgames and am currently playing through Aeon
+          Tresspass Odyssey. I also have 2 rescue cats, Mononoke and Orthos. 
         </p>
       </div>
       <div class="previous" id="previous">
         <h1 class="head">Previous Work</h1>
         <p class="output">
-          The most recent experience I have is from my web development class.
-          This class is also refered to as CS463. During the 4th assignment in
-          this class I learned and practiced using Javascript. Before CS463
-          assignment 4 I worked on CS463 assignment 2. This assignment had me
-          learn and practice using CSS to manipulate the HTML I wrote during
-          CS463 assignment 1. For CS463 assignment 1 I learned and practiced
-          HTML. This was the base of the assignments that came after. These
-          assignments and the class overall has done a great job teaching me how
-          to create, style and give functionality to website.
+          Since 2019 I have been working for Vanguard EMS Inc. During My time
+          at this company I have always worked closely with Test Automation 
+          Engineers. After I graduated in June 2023 I took on that role and 
+          have since created several programs for Vanguard. Unfortunately it
+          is an ITAR facility and I cannot share any of the programs code.
+          I have worked on a very large project to automate a manual test 
+          reducing the time of the test from 45 minutes to 8 minutes. I 
+          created a project that reads measurements from a multimeter and writes
+          them to a file in CSV format. I have also created a program that executes
+          command line arguements on multiple applications and returns the responses
+          to the user in a readable format.
         </p>
       </div>
       <div class="projects" id="projects">
