Changed the photo used in the website

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1 class="head">About</h1>
         <img
           class="ProImg"
-          src="../Docs/20220512_130947.jpg"
+          src="20230801_170749.jpg"
           alt="Antny Erdman"
           width="200"
           height="200"
