Added TriMet Project and Random Generator Project. added minor changes to structure and corrections of information.

--- a/index.html
+++ b/index.html
@@ -1,157 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Antny Erdman Professional Website</title>
     <link rel="stylesheet" href="ProBio.css" />
     <script defer src="ProBio.js"></script>
-  </head>
-  <body class="back">
+</head>
+<body class="back">
     <main>
-      <div class="links">
-        <nav>
-          <a class="route" href="#about">About</a>
-          <a class="route" href="#previous">Previous Work</a>
-          <a class="route" href="#projects">Projects</a>
-          <a class="route" href="#contact">Contact</a>
-        </nav>
-      </div>
-      <div class="about" id="about">
-        <h1 class="head">About</h1>
-        <img
-          class="ProImg"
-          src="20230801_170749.jpg"
-          alt="Antny Erdman"
-          width="300"
-          height="300"
-        />
-        <p class="output">
-          I graduated from Portland State University with my Bachelor's in
-          computer science in june of 2023. I am working in my free time to
-          learn about computer graphic design and application development.
-          I enjoy legacy boardgames and am currently playing through Aeon
-          Tresspass Odyssey. I also have 2 rescue cats, Mononoke and Orthos. 
-        </p>
-      </div>
-      <div class="previous" id="previous">
-        <h1 class="head">Previous Work</h1>
-        <p class="output">
-          Since 2019 I have been working for Vanguard EMS Inc. During My time
-          at this company I have always worked closely with Test Automation 
-          Engineers. After I graduated in June 2023 I took on that role and 
-          have since created several programs for Vanguard. Unfortunately it
-          is an ITAR facility and I cannot share any of the programs code.
-          <br />I have worked on a very large project to automate a manual test 
-          reducing the time of the test from 45 minutes to 8 minutes. <br />I 
-          created a project that reads measurements from a multimeter and writes
-          them to a file in CSV format for import into excel. <br />I have also created 
-          a program that executes command line arguements on multiple applications and 
-          returns the responses to the user in a readable format.
-        </p>
-      </div>
-      <div class="projects" id="projects">
-        <h1 class="head">Projects</h1>
-        <h2 class="ProjectName">Pacstar ETL</h2>
-        <p class="output">
-          This was my senior project. During this project I worked with a group of
-          six other students. We were tasked with the company Pacstar to make a 
-          program that they would incorporate into their company process. What Pacstar
-          needed was a program that extraced their test data, cleaned it up, then uploaded
-          it to a database they created. One unique part of this project is that the team
-          emulated a Pacstar software engineering team. This included weekly check-ins, 
-          using Jira and Confluence, and implementing code reviews. As an ETL program this 
-          project had three major parts. <br />The first part of the project was the extraction.
-          The tests that Pacstar ran resulted in hundreds of thousands of lines per test. Our
-          program extracted only relevent information which was determined by Pacstar. <br />
-          The second part of the program is tranformation. While we got the relevent data locations
-          not all of the data was correct. We sanatized the data removing any unwanted characters 
-          that could cause security risks, and making sure the data was in the correct format.
-          <br />The last part of the program was loading the extracted and transformed data into
-          Pacstars database. Knowing the structure of the data and database made creating the SQL 
-          commands easy.
-        </p>
-        <p class="output">
-          CS163 Program 2 was built to be the card game War. However it was also
-          meant to train my ability to use the stack, data structures, and
-          queues. It was written in C++ during my first year at Portland State
-          University.
-        </p>
-        <p class="output">
-          CS202 Program 3 was built to be a notebook application that can store,
-          modify, remove, or display any website, news station, or zoom meetings
-          the user wanted to. This application was meant to teach me about using
-          more complex data structures and object oriented programming. It was
-          written in C++ during my second year at Portland State University.
-        </p>
-        <a class="git" href="https://github.com/Anteny/School"
-          >School Projects</a
-        >
-      </div>
-      <div class="contact" id="contact">
-        <form class="ContactForm" id="form">
-          <h1 class="start" id="ContactHead">Contact Form</h1>
+        <div class="links">
+            <nav>
+                <a class="route" href="#about">About</a>
+                <a class="route" href="#previous">Previous Work</a>
+                <a class="route" href="#projects">Projects</a>
+                <a class="route" href="#contact">Contact</a>
+            </nav>
+        </div>
+        <div class="about" id="about">
+            <h1 class="head">About</h1>
+            <img class="ProImg"
+                 src="20230801_170749.jpg"
+                 alt="Antny Erdman"
+                 width="300"
+                 height="300" />
+            <p class="output">
+                I graduated from Portland State University with my Bachelor's in
+                computer science in june of 2023. I am working in my free time to
+                learn about computer graphic design and application development.
+                I enjoy legacy boardgames and am currently playing through Aeon
+                Tresspass Odyssey. I also have 2 rescue cats, Mononoke and Orthos.
+                <br /><br />
+            </p>
+        </div>
+        <div class="previous" id="previous">
+            <h1 class="head">Previous Work</h1>
+            <p class="output">
+                Since 2019 I have been working for Vanguard EMS Inc. During My time
+                at this company I have always worked closely with Test Automation
+                Engineers. Before I graduated, in december 2022 I took on that role and
+                have since created several programs for Vanguard. Unfortunately it
+                is an ITAR facility and I cannot share any of the programs code.
+                <br /><br />I have worked on a very large project to automate a manual
+                test reducing the time of the test from 45 minutes to 8 minutes. <br /><br />
+                I created a project that reads measurements from a multimeter and writes
+                them to a file in CSV format for import into excel. <br /><br />I have also
+                created a program that executes command line arguements on multiple applications
+                and returns the responses to the user in a readable format.<br /><br />
+            </p>
+        </div>
+        <div class="projects" id="projects">
+            <h1 class="head">Projects</h1>
+            <h2 class="ProjectName">Pacstar ETL</h2>
+            <p class="output">
+                This was my senior project. During this project I worked with a group of
+                six other students. We were tasked with the company Pacstar to make a
+                program that they would incorporate into their company process. What Pacstar
+                needed was a program that extraced their test data, cleaned it up, then uploaded
+                it to a database they created. One unique part of this project is that the team
+                emulated a Pacstar software engineering team. This included weekly check-ins and
+                using the same technologies as them such as C#, Jira, and Confluence. As an ETL program this
+                project had three major parts. <br /><br />The first part of the project was the extraction.
+                The tests that Pacstar ran resulted in hundreds of thousands of lines per test. Our
+                program extracted only relevent information which was determined by Pacstar. <br /><br />
+                The second part of the program is tranformation. While we got the relevent data locations
+                not all of the data was correct. We sanatized the data removing any unwanted characters
+                that could cause security risks, and making sure the data was in the correct format.
+                <br /><br />The last part of the program was loading the extracted and transformed data into
+                Pacstars database. Knowing the structure of the data and database made creating the SQL
+                commands easy.<br /><br />
+            </p>
+            <h2 class="ProjectName">TriMet Bus Heat Map</h2>
+            <p class="output">
+                For this project I made a script using python that was called automatically with google cloud
+                platform once per day. I then cleaned this data by removing empty fields and fields that didn't
+                meet assumptions about the data, such as the bus needing to exist on earth. This data was loaded
+                into a SQL database. After three months this data was queried and the resulting data was translated
+                and used by a map API to show periodic speeds of buses in the TriMet bus system.<br /><br />
+            </p>
+            <h2 class="ProjectName">DND DM Random Generator</h2>
+            <p class="output">
+                This program is a personal project that I am developing. The purpose of this program is to randomly
+                generate information for dungeon masters to use. This project is heavily prone to scope creep.
+                Before any scope creep occurs the information I want generated is a shops inventory. This will
+                include the information for the item type, subtype, description, cost, and name. The amount of information
+                might increase if necessary. The user will be able to create, save, load, or delete the SQL database that the
+                information is stored in. I also intend for the random results to be written to a document so the user will
+                be able to reference them later. The reason this project is prone to scope creep is I can extend it to include
+                randomly generating encounters, npcs, items, spells, treasure hoards, or any other information that has 
+                the dungeon master rolling on a random table. <br /><br />This project is meant only for personal use, 
+                and to show my abilities creating desktop applications.<br /><br />
+            </p>
+            <a class="git" href="https://github.com/Anteny/School">School Projects</a>
+        </div>
+        <div class="contact" id="contact">
+            <form class="ContactForm" id="form">
+                <h1 class="start" id="ContactHead">Contact Form</h1>
 
-          <label class="label1" for="username">Username:</label>
-          <input
-            class="TextInput"
-            type="username"
-            id="username"
-            name="username"
-          />
+                <label class="label1" for="username">Username:</label>
+                <input class="TextInput"
+                       type="username"
+                       id="username"
+                       name="username" />
 
-          <label class="label1" for="email">Email:</label>
-          <input class="TextInput" type="email" id="email" name="email" />
+                <label class="label1" for="email">Email:</label>
+                <input class="TextInput" type="email" id="email" name="email" />
 
-          <label class="label1" for="phone">Phone:</label>
-          <input
-            class="TextInput"
-            type="tel"
-            id="phone"
-            name="phone"
-            pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-            maxlength="10"
-          />
+                <label class="label1" for="phone">Phone:</label>
+                <input class="TextInput"
+                       type="tel"
+                       id="phone"
+                       name="phone"
+                       pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+                       maxlength="10" />
 
-          <label class="MessageLabel" for="message">Message:</label><br />
-          <textarea
-            class="MessageInput"
-            type="text"
-            id="message"
-            name="message"
-          ></textarea>
+                <label class="MessageLabel" for="message">Message:</label><br />
+                <textarea class="MessageInput"
+                          type="text"
+                          id="message"
+                          name="message"></textarea>
 
-          <fieldset class="field">
-            <legend>Which would you prefer I respond to?</legend>
+                <fieldset class="field">
+                    <legend>Which would you prefer I respond to?</legend>
 
-            <input
-              type="radio"
-              id="contactChoice1"
-              name="contact"
-              value="Phone"
-            />
-            <label class="label2" for="contactChoice1">Phone</label>
+                    <input type="radio"
+                           id="contactChoice1"
+                           name="contact"
+                           value="Phone" />
+                    <label class="label2" for="contactChoice1">Phone</label>
 
-            <input
-              type="radio"
-              id="contactChoice2"
-              name="contact"
-              value="Email"
-            />
-            <label class="label2" for="contactChoice2">Email</label>
-          </fieldset>
-          <label class="label3" for="date">Date:</label>
-          <input class="DateInput" type="date" id="date" name="date" />
+                    <input type="radio"
+                           id="contactChoice2"
+                           name="contact"
+                           value="Email" />
+                    <label class="label2" for="contactChoice2">Email</label>
+                </fieldset>
+                <label class="label3" for="date">Date:</label>
+                <input class="DateInput" type="date" id="date" name="date" />
 
-          <button class="SButton" type="submit" name="submit" value="Submit">
-            Submit
-          </button>
-          <button class="RButton" type="reset" name="reset" value="Reset">
-            Reset
-          </button>
-        </form>
-      </div>
+                <button class="SButton" type="submit" name="submit" value="Submit">
+                    Submit
+                </button>
+                <button class="RButton" type="reset" name="reset" value="Reset">
+                    Reset
+                </button>
+            </form>
+        </div>
     </main>
-  </body>
+</body>
 </html>
