Changed link to point at random gen project, and moved it into random gen projects paragraph

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                 might increase if necessary. The user will be able to create, save, load, or delete the SQL database that the
                 information is stored in. I also intend for the random results to be written to a document so the user will
                 be able to reference them later. The reason this project is prone to scope creep is I can extend it to include
-                randomly generating encounters, npcs, items, spells, treasure hoards, or any other information that has 
-                the dungeon master rolling on a random table. <br /><br />This project is meant only for personal use, 
+                randomly generating encounters, npcs, items, spells, treasure hoards, or any other information that has
+                the dungeon master rolling on a random table. <br /><br />This project is meant only for personal use,
                 and to show my abilities creating desktop applications.<br /><br />
+                <a class="git" href="https://github.com/Anteny/DM-Generation-Tool">Github Here</a> <br /><br />
             </p>
-            <a class="git" href="https://github.com/Anteny/School">School Projects</a>
         </div>
         <div class="contact" id="contact">
             
