Changed where contact is. Added contact info

--- a/index.html
+++ b/index.html
@@ -12,19 +12,26 @@
     <main>
         <div class="links">
             <nav>
+                <a class="route" href="#contact">Contact</a>
                 <a class="route" href="#about">About</a>
                 <a class="route" href="#previous">Previous Work</a>
                 <a class="route" href="#projects">Projects</a>
-                <a class="route" href="#contact">Contact</a>
             </nav>
         </div>
-        <div class="about" id="about">
-            <h1 class="head">About</h1>
+        <div class="contact" id="contact">
             <img class="ProImg"
                  src="20230801_170749.jpg"
                  alt="Antny Erdman"
                  width="300"
                  height="300" />
+            <h1 class="head">Contact Info</h1>
+            <p class="output">
+                Phone:  (541)-591-7681<br /><br />
+                Email:  Anteny30@gmail.com<br /><br />
+            </p>
+        </div>
+        <div class="about" id="about">
+            <h1 class="head">About</h1>
             <p class="output">
                 I graduated from Portland State University with my Bachelor's in
                 computer science in june of 2023. I am working in my free time to
@@ -94,9 +101,7 @@
                 <a class="git" href="https://github.com/Anteny/DM-Generation-Tool">Github Here</a> <br /><br />
             </p>
         </div>
-        <div class="contact" id="contact">
-            
-        </div>
+
     </main>
 </body>
 </html>
