--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="contact" id="contact">
             <h1 class="head">Contact Info</h1>
-            <p class="output">
+            <p class="ContactOutput">
                 Phone:  (541)-591-7681<br /><br />
                 Email:  Anteny30@gmail.com<br /><br />
             </p>
