fixed capitalization problem

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="previous" id="previous">
             <h1 class="head">Previous Work</h1>
             <p class="output">
-                Since 2019 I have been working for Vanguard EMS Inc. During My time
+                Since 2019 I have been working for Vanguard EMS Inc. During my time
                 at this company I have always worked closely with Test Automation
                 Engineers. Before I graduated, in december 2022 I took on that role and
                 have since created several programs for Vanguard. Unfortunately it
