--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 computer science in june of 2023. I am working in my free time to
                 learn about computer graphic design and application development.
                 I enjoy legacy boardgames and am currently playing through Aeon
-                Tresspass Odyssey. I also have 2 rescue cats, Mononoke and Orthos.
+                Tresspass Odyssey. I have 2 rescue cats, Mononoke and Orthos that I
+                take care of with my wife.
                 <br /><br />
             </p>
         </div>
@@ -81,17 +82,27 @@
             </p>
             <h2 class="ProjectName">DND DM Random Generator</h2>
             <p class="output">
-                This program is a personal project that I am developing. The purpose of this program is to randomly
-                generate information for dungeon masters to use. This project is heavily prone to scope creep.
-                Before any scope creep occurs the information I want generated is a shops inventory. This will
-                include the information for the item type, subtype, description, cost, and name. The amount of information
-                might increase if necessary. The user will be able to create, save, load, or delete the SQL database that the
-                information is stored in. I also intend for the random results to be written to a document so the user will
-                be able to reference them later. The reason this project is prone to scope creep is I can extend it to include
+                This program is a personal project that I am developing. It is currently on hold while I work
+                on the ray tracer challenge. The purpose of this program is to randomly generate information
+                for dungeon masters to use. This project is heavily prone to scope creep. Before any scope creep
+                occurs the information I want generated is a shops inventory. This will include the information
+                for the item type, subtype, description, cost, and name. The amount of information might increase
+                if necessary. The user will be able to create, save, load, or delete the SQL database that the information
+                is stored in. I also intend for the random results to be written to a document so the user will be
+                able to reference them later. The reason this project is prone to scope creep is I can extend it to include
                 randomly generating encounters, npcs, items, spells, treasure hoards, or any other information that has
                 the dungeon master rolling on a random table. <br /><br />This project is meant only for personal use,
                 and to show my abilities creating desktop applications.<br /><br />
                 <a class="git" href="https://github.com/Anteny/DM-Generation-Tool">Github Here</a> <br /><br />
+            </p>
+            <h2 class="ProjectName">The Ray Tracer Challenge</h2>
+            <p class="output">
+                I am working through the book The Ray Tracer Challenge by Jamis Buck. The purpose is to create a ray tracing
+                engine from scratch. The book is language agnostic and is only directing me by giving me unit tests that I need
+                to build the functions for. It is giving me experience interpreting instructions, test oriented programming, and
+                linear algebra. I will update this as I progress through the book, gain more experience, and add more code to my
+                Github.<br /><br />
+                <a class="git" href="https://github.com/Anteny/RayTracerChallenge">Github Here</a> <br /><br />
             </p>
         </div>
         <div class="contact" id="contact">
